--- a/pom.xml
+++ b/pom.xml
@@ -359,12 +359,6 @@
             <version>2.1.3.RELEASE</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.mybatis.caches/mybatis-redis -->
-        <dependency>
-            <groupId>org.mybatis.caches</groupId>
-            <artifactId>mybatis-redis</artifactId>
-            <version>1.0.0-beta2</version>
-        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
         <dependency>
@@ -388,6 +382,14 @@
             <artifactId>commons-pool2</artifactId>
             <version>2.3</version>
         </dependency>
+
+        <!-- 支付宝沙箱 -->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.7.4.ALL</version>
+        </dependency>
+
 
 
     </dependencies>
